# CatPandoc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: application.md  pandoc2ansi.md  pandoc2plain.md  pandoc2xyz.md  processpandoc.md  readme.md  types.md
DOCS/catpandoc/: application.md  index.md  module.md  pandoc2ansi.md  pandoc2plain.md  pandoc2xyz.md  processpandoc.md  types.md
catpandoc/: __main__.py  application.py  pandoc2ansi.py  pandoc2plain.py  pandoc2xyz.py  processpandoc.py  types.py
documentation/reference/: README.md
documentation/reference/catpandoc/: application.md  index.md  module.md
test/: catcomplex.py  catsimple.py  cheatsheet.md  cli2gui.docx  cli2gui.md
test_data/: catpandoc.ltx  catpandoc.md
tests/: test_application.py
tests/data/: catpandoc.ansi  catpandoc.html  catpandoc.md  catpandoc.rst  catpandoc.txt  catpandoc_docx.txt  catpandoc_html.txt  catpandoc_latex.txt  catpandoc_rst.txt  cli2gui.md
tests/test_data/: catpandoc.ansi  catpandoc.docx  catpandoc.md  catpandoc_docx.txt  catpandoc_rst.txt  cli2gui.md
