[tool.poetry]
name = "catpandoc"
version = "2021"
description = "Cat multiple document files to the terminal"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Text Processing",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/CatPandoc"
repository = "https://github.com/FHPythonUtils/CatPandoc"
documentation = "https://github.com/FHPythonUtils/CatPandoc/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
catpandoc = 'catpandoc.application:cli'

[tool.poetry.dependencies]
python = "^3.7"
art = "<7,>=5.1"
emoji = "<3,>=1.1.0"
pypandoc = "<3,>=1.5"
catimage = "<2022,>=2020.6.2"
Pygments = "<4,>=2.7.4"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
