[tool.poetry]
name = "catpandoc"
version = "2021.0.2"
license = "mit"
description = "Cat multiple document files to the terminal"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Text Processing",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/CatPandoc"
repository = "https://github.com/FHPythonUtils/CatPandoc"
documentation = "https://github.com/FHPythonUtils/CatPandoc/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
catpandoc = 'catpandoc.application:cli'

[tool.poetry.dependencies]
python = "^3.7"
art = "<6,>=5.3"
emoji = "<2,>=1.6.1"
pypandoc = "<2,>=1.6.4"
catimage = "<2023,>=2021"
Pygments = "<3,>=2.10.0"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
